Fixed form alignment and created event to delete cards

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ h1 {
 }
 
 /*Form*/
-form {
+.form {
   text-align: center;
   margin-bottom: 40px;
 }
@@ -100,9 +100,15 @@ span.error {
   padding: 10px;
   background-color: lightgreen;
   border-radius: 5px;
-  position: absolute;
+  padding: 80px 10px 50px 10px;
 }
-
+.delete {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  cursor: pointer;
+  font-size: 20px;
+}
 /*Cards respo*/
 @media (max-width: 900px){
   .list-of-cards li {
